# HabitTracker

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
habit_tracker/achievements/: models.py  urls.py  views.py
habit_tracker/achievements/migrations/: 0001_initial.py  0002_alter_achievement_options_and_more.py
habit_tracker/habit_tracker/: settings.py  urls.py
habit_tracker/habits/: forms.py  models.py  urls.py  views.py
habit_tracker/habits/migrations/: 0001_initial.py  0002_alter_habit_options_alter_habit_description_and_more.py  0003_habit_profile_picture.py  0004_remove_habit_profile_picture_habit_habit_picture.py  0005_alter_habit_end_date_alter_habit_start_date.py  0006_habit_required_count.py  0007_habit_current_count_alter_habit_required_count.py
habit_tracker/levelconfigs/: admin.py  apps.py  models.py  utils.py
habit_tracker/levelconfigs/migrations/: 0001_initial.py
habit_tracker/reminders/: models.py  urls.py  views.py
habit_tracker/reminders/migrations/: 0001_initial.py  0002_alter_reminder_options.py
habit_tracker/static/css/: add.css  delete.css  habit_detail.css  habit_list.css  update_form.css  user_detail.css  user_list.css
habit_tracker/templates/: base.html
habit_tracker/templates/users/: user_list.html
habit_tracker/users/: forms.py  models.py  urls.py  views.py
habit_tracker/users/migrations/: 0001_initial.py  0002_alter_user_options_user_profile_picture.py  0003_alter_user_profile_picture.py  (+3 more)
habit_tracker/xp_logs/: admin.py  apps.py  models.py  urls.py  views.py
(+22 files in other folders)
